--- a/index.html
+++ b/index.html
@@ -30,18 +30,19 @@
           sit amet fringilla massa.
         </p>
       </div>
-      <div class="section2">
-        <h2>Orca Spends Vacation at Land World Puget</h2>
-        <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-        <span>Earth Spins Backwards for 2017</span>
-      </div>
-      <div class="section3">
-        <h2>Burger for Breakfast: How Early is too Early?</h2>
-        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-        <span>Research Shows Cameras Erase Memory</span>
+      <div class="column2">
+        <div class="section2">
+          <h2>Orca Spends Vacation at Land World Puget</h2>
+          <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+          <span>Earth Spins Backwards for 2017</span>
+        </div>
+        <div class="section3">
+          <h2>Burger for Breakfast: How Early is too Early?</h2>
+          <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+          <span>Research Shows Cameras Erase Memory</span>
+        </div>
       </div>
     </div>
-
     <div class="column medium">
       <div class="section4">
         <h2>FBI Finds Action Star Guilty of False Advertising</h2>
