--- a/index.html
+++ b/index.html
@@ -63,9 +63,28 @@
       </div>
       <div class="section7">
         <h3>NEWS BITES</h3>
-        <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+        <p>Cat Emoji Goes Viral</p>
+        <p>Buy Youtube Views</p>
+        <p>Home Business Advertising Ideas</p>
+        <p>Advertising Internet Online</p>
+        <p>Illustration in Marketing Materials</p>
+        <p>Finally a Top Secret Way You Can</p>
       </div>
     </div>
+  </div>
+  <div class="footer">
+    <div class="header2">
+          <span>MY Times |</span>
+    </div>
+    <div class="nav2">
+      <span><a href="#">World</a></span>
+      <span><a href="#">U.S.</a></span>
+      <span><a href="#">Tech</a></span>
+      <span><a href="#">Science</a></span>
+    </div>
+  </div>
+  <div class="copyright">
+    <p>© 2016, My Times (A Division of Codecademy bite)</p>
   </div>
   </div>
 </body>
